add tests (#2768)
* add tests

* checkstyle

* replace checks

* replace checks

* restore visibility

* checkstyle

---------

Co-authored-by: yogesh-hullatti <53007108+yogesh-hullatti@users.noreply.github.com>